--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+    <!--  Modal -->
+<div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <h3>Yay you won!</h3>
+          <button id="myBtn">Play again?</button>
+        </div>
+      </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
